# advent_of_code

./: .gitignore  pyproject.toml  pyrightconfig.json
advent_of_code/: input_getter.py
advent_of_code/2015/Day_1/: Part1.py  Part2.py
advent_of_code/2015/Day_10/: Part_1.py  Part_2.py
advent_of_code/2015/Day_11/: Part1.py  Part2.py
advent_of_code/2015/Day_12/: Part2.py  Part_1.py
advent_of_code/2015/Day_13/: Part1.py  Part2.py
advent_of_code/2015/Day_14/: Part1.py  Part2.py
advent_of_code/2015/Day_15/: Part1.py  Part2.py
advent_of_code/2015/Day_16/: Part1.py  Part2.py
advent_of_code/2015/Day_17/: Part1.py  Part2.py
advent_of_code/2015/Day_18/: Part1.py  Part2.py
advent_of_code/2015/Day_19/: Part1.py  Part2.py
advent_of_code/2015/Day_2/: Part1.py  Part2.py
advent_of_code/2015/Day_20/: Part1.py
advent_of_code/2015/Day_3/: Part1.py  Part2.py
advent_of_code/2015/Day_4/: Part1.py  Part2.py
advent_of_code/2015/Day_5/: Part1.py  Part2.py  input5.txt
advent_of_code/2015/Day_6/: Part1.py  Part2.py
advent_of_code/2015/Day_7/: Part1.py  Part2.py  Randoms_part1_alternative.py  notes.txt
advent_of_code/2015/Day_8/: Part1.py  Part2.py  Part2_2.py
advent_of_code/2015/Day_9/: Part1.py  Part2.py
advent_of_code/2016/Day_1/: Day_1_Part1.py  Day_1_Part2.py
advent_of_code/2016/Day_2/: Day_2_Part1.py  Day_2_Part2.py
advent_of_code/2019/: Day4_Part1.py  Day4_Part1_v2.py  Day4_Part2.py  Problem_2.py  Problem_3.py  Problem_5.py  Problem_5_2.py  Problem_6.py  input_getter.py  intcode.py
side_thoughts/: distributed_random.py
(+9 files in other folders)
