[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Daniel Brown <browndj3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
pygame = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
